--- a/contracts/package.json
+++ b/contracts/package.json
@@ -3,5 +3,10 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.9"
+  },
+  "dependencies": {
+    "@xyrusworx/hardhat-solidity-json": "^1.0.2",
+    "dotenv": "^16.4.5",
+    "solidity-docgen": "^0.6.0-beta.36"
   }
 }
