--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.5",
     "viem": "^2.20.0",
     "wagmi": "^2.12.7"
   },
