--- a/contracts/package.json
+++ b/contracts/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.22.9"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
     "@xyrusworx/hardhat-solidity-json": "^1.0.2",
     "dotenv": "^16.4.5",
     "solidity-docgen": "^0.6.0-beta.36"
